entity_macros/tests/ui/derive/ent/unexpected-ent-lit-attr.stderr
error: Unexpected literal attribute
  --> $DIR/unexpected-ent-lit-attr.rs:11:11
   |
11 |     #[ent("something")]
   |           ^^^^^^^^^^^
