entity_macros/tests/ui/derive/ent/unexpected-ent-lit-attr.rs
use entity::{Database, Ent, Id};

#[derive(Clone, Ent)]
struct TestEnt {
    #[ent(id)]
    id: Id,

    #[ent(database)]
    database: Option<Box<dyn Database>>,

    #[ent(created)]
    created: u64,

    #[ent(last_updated)]
    last_updated: u64,

    #[ent("something")]
    other: usize,
}

fn main() {}
